k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ad-platform
  labels:
    app.kubernetes.io/name: ad-platform
    environment: production
